--- a/Lab 5/main.css
+++ b/Lab 5/main.css
@@ -1,62 +1,19 @@
 .title {
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 body {
     background-color: #F3F3F3;
 }
 
-header {
-    background-color: #6244a1;
-    padding: 20px 60px 20px 60px;
+h1, h2, h3 {
+    padding: 5;
+    margin: 5;
 }
 
-.Logo {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.logotipe {
-    z-index: 5;
-}
-
-.prof {
-    display: flex;
-    align-items: center;
-}
-
-.links_entry_exit {
-    display: flex;
-    align-items: center;
-}
-
-.link_entry_exit {
-    margin-left: 20px;
-    padding-bottom: 3px;
-    font-size: 18px;
-}
-
-.white {
-    color: #fff;
-    text-decoration: underline;
-    font-weight: 510;
-    font-family: Arial;
-}
-
-.blue{
-    color: #366AF3;
-    border-bottom: 1px solid #366AF3;
-}
-
-.site_centr {
-    margin: 0 auto;
-    padding: 0 15px;
-    width: 100%;
-    max-width: 1200px;
+h4 {
+    padding: 5;
+    margin: 5; 
 }
 
 .all_content {
@@ -65,7 +22,7 @@ header {
 }
 .content {
     width: 100%;
-    max-width: 820px;
+    max-width: 800px;
     margin-top: 40px;
 }
 
@@ -77,9 +34,9 @@ header {
 
 .themas_post{
     position: relative;
-     height: 392px;
+    height: 353px;
     width: 100%;
-    max-width: 393px;
+    max-width: 353px;
     box-shadow: 0px 4px 12px #624c901a;
     border-radius: 5px;
     background-color: #fff;
@@ -93,12 +50,12 @@ header {
 
 .post_head {
     margin-left: 5%;
-    margin-top: 20px;
+    margin-top: -5px;
     font-weight: 700;
 }
 
 .bellow_post {
-    margin-top: 4px;
+    margin-top: 0px;
     margin-left: 5%;
 }
 
@@ -107,7 +64,7 @@ header {
     position: absolute;
     bottom: 0;
     margin-left: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
 }
 
 .post_thema {
@@ -132,7 +89,7 @@ header {
 }
 
 .rubricki_s {
-    font-size: 25%;
+    font-size: 25px;
     font-weight: 700;
 }
 
@@ -146,9 +103,8 @@ header {
     margin-top: 5%;    
 }
 
-#show_all_publication {
-    margin-bottom: 20px;
-    font-size: 20px;
+a {
+    text-decoration: none;
 }
 
 button {
@@ -159,35 +115,10 @@ button {
     cursor: pointer;
 }
 
-.footer {
-    margin: 60px 0;
+.hide {
+    display: none;
 }
 
-.bellow_site {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-footer.links_entry_exit:first-child {
-    margin-left: 0;
-    width: 100px;
-}
-
-.bottom_right {
-    color: #999999;
-}
-
-h1, h2, h3 {
-    padding: 0;
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-h4 {
-    padding: 0;
-    margin: 0; 
+.show {
+    display: block;
 }
