--- a/Lab 5/post.css
+++ b/Lab 5/post.css
@@ -1,72 +1,16 @@
 body {
-    background-color: #F3F3F3;
-}
-header {
-    background-color: #6244a1;
-    padding: 20px 60px 20px 60px;
+    background-color: rgb(231, 231, 231);
 }
 
-.Logo {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-    display: flex;
-    justify-content: space-between;
-}
-.site_centr {
-    margin: 0 auto;
-    padding: 0 15px;
-    width: 100%;
-    max-width: 1200px;
-}
-.logotipe {
-    z-index: 5;
-}
-.prof {
-    display: flex;
-    align-items: center;
-}
-
-.links_entry_exit {
-    display: flex;
-    align-items: center;
-}
-
-.link_entry_exit {
-    margin-left: 20px;
-    padding-bottom: 3px;
-    font-size: 18px;
-}
-.white {
-    color: #fff;
-    text-decoration: underline;
-    font-weight: 510;
-    font-family: Arial;
-}
-
-.blue{
-    color: #366AF3;
-    border-bottom: 1px solid #366AF3;
-}
-
-.h1 {
-    font-family: Arial;
+.second_title {
+    margin-top: 5%;
     font-weight: 800;
-    margin-top: 5%;
+    font-family: Arial;
 }
 
-.link_sobaka {
-    margin-left: 20px;
-    padding-bottom: 3px;
-    font-size: 18px;
-    color: #fff;
-    font-weight: 600;
-    font-family: Arial;  
-}
 .all_content {
-    background-color: #ffffff;
     margin-top: 5%;
+    background-color: #ffffff;
     border-radius: 8px;
     padding: 40px;
     box-sizing: border-box;
@@ -74,7 +18,7 @@ header {
 
 .labels {
     margin-top: 20px;
-    color: #11224480;
+    color: rgba(17, 34, 68, 0.5);
     font-weight: 500;
     font-size: 14px;
 }
@@ -82,16 +26,16 @@ header {
 .input {
     padding: 24px 0px 24px 24px;
     margin-top: 4px;
-    border: 1px solid #11224480;
+    border: 1px solid rgba(17, 34, 68, 0.5);
     border-radius: 8px;
     width: 100%;
     height: 70px;
 }
 
-/*.text {
+.text {
     height: 200px;
 }
-*/
+
 .button_add_file {
     display: block;
     width: 362px;
@@ -100,12 +44,6 @@ header {
     border-radius: 8px;
     text-align: center;
 }
-#add_file {
-    opacity: 0;
-    cursor: pointer;
-    position: absolute;
-    z-index: 5;
-}
 
 .button_file {
     margin-top: 20px;
@@ -113,7 +51,7 @@ header {
     justify-content: left;
 }
 
-.text_button {
+.text_file {
     font-size: 17px;
     color: #624C90;
 }
@@ -136,40 +74,9 @@ header {
     height: 60px;
 }
 
-.footer {
-    margin: 60px 0;
-}
-
-.bellow_site {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-footer.links_entry_exit:first-child {
-    margin-left: 0;
-    width: 100px;
-}
-
-.bottom_right {
-    color: #999999;
-}
-
-.white {
-    font-size: 16px;
-    color: #6244a1;
-    font-weight: 550;
-    font-family: Arial;
-    background-color: #fff;
-    border-radius: 8px;
-    margin-left: 20px;
-    width: 145px;
-    height: 40px;
-}
-
-.white_link {
-    color: #fff;
-    text-decoration: underline;
-    font-weight: 510;
-    font-family: Arial;
+#add_file {
+    opacity: 0;
+    cursor: pointer;
+    position: absolute;
+    z-index: 5;
 }
